Cabal-Version:  2.2
Name:           HDF5-direct
Version:        0.1
Synopsis:       Low level warppers for HDF5 library
Description:


License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:        -Wall -O2
  Default-Language:   Haskell2010
  hs-source-dirs:     src
  extra-libraries:    hdf5 hdf5_hl
  --
  include-dirs:       ./cbits
  c-options:          -Wall
  c-sources:          cbits/hdf5.c
  extra-source-files: cbits/hdf5-hs.h
  --
  Build-Depends:    base         >=4.12 && <5
                  , exceptions   >=0.10
                  , transformers
  Exposed-modules:
        HDF5.C
        HDF5.C.Types
        HDF5.C.H5A
        HDF5.C.H5D
        HDF5.C.H5E
        HDF5.C.H5F
        HDF5.C.H5G
        HDF5.C.H5S
        HDF5.C.H5T
        HDF5.C.H5LT
