Cabal-Version:  2.2
Name:           HDF5-direct
Version:        0.1
Synopsis:       Low level warppers for HDF5 library
Description:
  These allows to directly call C function with little help for user. This
  package exists in order to make development process easier: ghci doesn't
  like foreign imports and to be able to handle single and multithreaded
  builds of HDF5

License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

extra-source-files:
  cbits/hdf5-hs.h

Library
  Ghc-options:        -Wall -O2
  Default-Language:   Haskell2010
  hs-source-dirs:     src
  extra-libraries:    hdf5 hdf5_hl
  --
  include-dirs:       ./cbits
  cc-options:         -Wall
  c-sources:          cbits/hdf5.c
  --
  Build-Depends:    base         >=4.17 && <5
                  , exceptions   >=0.10
                  , transformers
  Exposed-modules:
        HDF5.C
        HDF5.C.Types
        HDF5.C.H5A
        HDF5.C.H5D
        HDF5.C.H5E
        HDF5.C.H5F
        HDF5.C.H5G
        HDF5.C.H5S
        HDF5.C.H5T
        HDF5.C.H5L
        HDF5.C.H5P
        HDF5.C.H5LT
