Cabal-Version:  2.2
Name:           HDF5-hl
Version:        0.1
Synopsis:       High level API for HDF5 library
Description:


License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:      -Wall -O2
  Default-Language: Haskell2010
  hs-source-dirs:   src
  --
  Build-Depends:    base         >=4.12 && <5
                  , HDF5-direct
                  , transformers
                  , exceptions
                  , vector       >=0.13
                  , fixed-vector >=1.2.2.1
  Exposed-modules:
        HDF5.HL
        HDF5.HL.Internal
        HDF5.HL.Internal.Dataspace
        HDF5.HL.Internal.Enum
        HDF5.HL.Internal.Error
        HDF5.HL.Internal.Types
        HDF5.HL.Internal.Wrappers

Test-suite HDF5-hl-tests
  type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  ghc-options:      -Wall
  Build-Depends:    base
                  , HDF5-hl
                    --
                  , temporary
                  , filepath
                    --
                  , tasty
                  , tasty-quickcheck
                  , tasty-hunit
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:  TM.File
