Cabal-Version:  2.2
Name:           HDF5-hl
Version:        0.1
Synopsis:       High level API for HDF5 library
Description:
  Hihb level bindings to HDF5 library. This library aims to provide
  nice and idiomatic API for working with HDF5 libabry. Since library
  is huge this comes at the cost of exhaustiveness. Only subset of
  features is supported.

License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:        -Wall -O2
  Default-Language:   GHC2021
  Default-Extensions: NoPolyKinds
                      --
                      --NoFieldSelectors
                      --OverloadedRecordDot
                      --DuplicateRecordFields
                      --
                      DataKinds
                      DerivingStrategies
                      DerivingVia
                      LambdaCase
                      ViewPatterns
                      PatternSynonyms
                      MultiWayIf
  hs-source-dirs:     src
  --
  Build-Depends:    base         >=4.16 && <5
                  , HDF5-direct
                  , transformers
                  , exceptions
                  , primitive    >=0.7
                  , deepseq      >=1.4
                  , vector       >=0.13.2
                  , fixed-vector >=2.0
                  , containers   >=0.6
                  , text         >=2
  Exposed-modules:
        HDF5.HL
        HDF5.HL.Attribute
        HDF5.HL.Dataspace
        HDF5.HL.Types
        HDF5.HL.Vector
        HDF5.HL.Unsafe.Encoding
        HDF5.HL.Unsafe.Types
        HDF5.HL.Unsafe.Enum
        HDF5.HL.Unsafe.Error
        HDF5.HL.Unsafe.Wrappers
        HDF5.HL.Unsafe.Property
        --
--        HDF5.HL.Serialize
        HDF5.HL.Internal


Test-suite HDF5-hl-tests
  type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  ghc-options:      -Wall
  Build-Depends:    base
                  , HDF5-hl
                    --
                  , temporary
                  , filepath
                    --
                  , tasty
                  , tasty-quickcheck
                  , tasty-hunit
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:  TM.File
